# advent

./: .gitignore
2017/: 01-reverse-captcha.py  02-checksum.py
2018/: 01-chronal-calibration.kts  02-inventory-management.kts  03-no-matter-how-you-slice-it.kts  04-repose-record.kts  05-alchemical-reduction.kts  06-chronal-coordinates.kts  07-sum-of-its-parts.kts  08-memory-maneuver.kts  09-marble-mania.kts  10-stars-align.kts  11-chronal-charge.kts  14-chocolate-charts.kts  README.md
2019/: 01-the-tyranny-of-the-rocket-equation.kts  02-program-alarm.kts  02b-program-alarm-constant.kts  03-crossed-wires.kts  04-service-container.kts  05-sunny-with-a-chance-of-asteroids.kts  06-universal-orbit-map.kts  07-amplification-circuit.kts  08-space-image-format.kts  09-sensor-boost.kts  10-monitoring-station.kts  11-space-police.kts  12-the-n-body-problem.kts  13-care-package.kts  14-space-stoichiometry.kts  15-oxygen-system.kts  16-flawed-frequency-transmission.kts  17-set-and-forget.kts  18-many-worlds-interpretation.kts  19-tractor-beam.kts  20-donut-maze.kts  21-springdroid-adventures.kts  22-slam-shuffle.kts  23-category-six.kts  24-planet-of-discord.kts  25-cryostasis.kts  README.md  fetchInput.kt  fetchInput.sh  intcodeComputer.kt
2020/: build.gradle  fetchInput.kt
2020/src/main/kotlin/: AocPuzzle.kt  Day00.kt  Day01.kt  (+20 more)
2022/: Cargo.toml  README.md
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  main.rs  puzzle.rs  template.rs  util.rs
