[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
reqwest = { version = "0.11" }
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
itertools = "0.10.5"
regex = "1.7.0"
lazy_static = "1.4.0"
nom = "7.1.1"
nom-regex = "0.2.0"
yansi = "0.5.1"
colorsys = "0.6.6"
fxhash = "0.2.1"
memoize = "0.3.3"

[profile.release]
debug = true